Closed Bug 121872 Opened 24 years ago Closed 24 years ago

PR_Listen does not set error codes when it fails on Windows and OS/2

Categories

(NSPR :: NSPR, defect, P2)

4.1.2
x86
Windows 98

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: wtc, Assigned: wtc)

References

Details

Attachments

(2 files)

The "WIN95" and OS/2 implementations of PR_Listen() don't set the error codes when PR_Listen() fails. This is a minor problem, especially for client applications, who don't usually call PR_Listen().
The "WIN95" patch has been tested and checked into the tip of NSPR.
Status: NEW → ASSIGNED
Priority: -- → P2
Target Milestone: --- → 4.2
Attached patch patch for OS/2Splinter Review
How about this for OS/2?
Javier, Your patch looks good. I checked it in after minor editing. Thanks!
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Blocks: 129902
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: