Bugzilla bug 121872: define _PR_MD_LISTEN as a function so that we can set error codes if listen() fails. Modified files: _win95.h w95sock.c